tests/vertical-slice/accept/match_float_literal_arm.hew
fn main() {
    let a = match 1.5 {
        1.5 => 1,
        _ => 0,
    };
    println(a);

    let b = match 1.4 {
        1.5 => 1,
        _ => 0,
    };
    println(b);

    let c: f32 = 2.5;
    let d = match c {
        2.5 => 3,
        _ => 4,
    };
    println(d);
}
