tests/vertical-slice/reject/payload_enum_equality.hew
enum Shape {
    Circle(i64);
    Empty;
}

fn main() {
    let a = Circle(1);
    let b = Circle(1);
    let _ = a == b;
}
